kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapps-io-cms
  namespace: default
  labels:
    app: tapps-io-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tapps-io-cms
  template:
    metadata:
      labels:
        app: tapps-io-cms
    spec:
      containers:
        - name: tapps-io-cms
          image: tapps/tapps-io.cms:$VERSION
          ports:
            - containerPort: 1337
              name: cms
