kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tapps-io-cms
  namespace: default
  labels:
    app: tapps-io-cms
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: cms
      name: http
  selector:
    app: tapps-io-cms
