kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tapps-io-cms
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: tapps-io-cms
spec:
  rules:
    - host: tapps.io
      http:
        paths:
          - path: /api/content(/|$)(.*)
            backend:
              serviceName: tapps-io-cms
              servicePort: http
    - host: cms.tapps.io
      http:
        paths:
          - path: /
            backend:
              serviceName: tapps-io-cms
              servicePort: http
